--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% if title %}
-        <title>Dkango Blog - {{ title }}</title>
-    {% else %}
-        <title>Django Blog</title>
-    {% endif %}
-</head>
-<body>
+{% extends "blog/base.html" %}
+{% block content %}
     <h1>About Page</h1>
-</body>
-</html>
+{% endblock content %}
+
+
